<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingTop="20dp"
    android:weightSum="10">

    <ImageView
        android:id="@+id/btn_BackToLogin"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:src="@drawable/ic_baseline_keyboard_backspace_24" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1.5"
       android:orientation="vertical">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:fontFamily="@font/poppins_semi_bold"
           android:text="@string/fogotPassword"
           android:textAllCaps="false"
           android:textColor="@color/blue"
           android:textSize="28sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="-5dp"
           android:fontFamily="@font/poppins_regular"
           android:text="@string/ch_ng_t_i_c_th_h_tr_b_n_b_ng_c_ch_g_i_cho_b_n_m_t_m_x_c_nh_n_t_l_i_m_t_kh_u"
           android:textAllCaps="false"
           android:textColor="@color/gray"
           android:textSize="15sp" />
   </LinearLayout>



  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="7.7"
      android:orientation="vertical">
      <EditText
          android:id="@+id/ed_userName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/poppins_regular"
          android:layout_marginBottom="20dp"
          android:hint="@string/nhap_usser"
          android:textColor="@color/black" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btn_ResetPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/background_button_corner"
          android:fontFamily="@font/poppins_medium"
          android:paddingTop="5dp"
          android:text="@string/Reset_password"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textSize="18sp" />
  </LinearLayout>
</LinearLayout>