<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="30dp"
    android:backgroundTint="#BDBDBD">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:background="#fff"
            android:paddingLeft="27.5dp"
            android:paddingRight="27.5dp"
            android:paddingTop="22dp"
            android:paddingBottom="22dp"
            android:gravity="center"
            android:textSize="23sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ng_xu_t_kh_i_t_i_kho_n_c_a_b_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_cancel"
                android:background="@drawable/onclick_dialog_logout"
                android:textColor="@color/blue_900"
                android:padding="16dp"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/h_y"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"/>
            <TextView
                android:id="@+id/tv_logout"
                android:background="@drawable/onclick_dialog_logout"
                android:textColor="@color/red"
                android:padding="16dp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/ng_xu_t"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>