<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_error"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.9"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <ImageView
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_baseline_close_24" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center">

        <EditText
            android:id="@+id/edt_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:enabled="false"
            android:fontFamily="@font/poppins_medium"
            android:hint="dd/mm/yyyy"
            android:inputType="date"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/chooseDay"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/edt_day"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_baseline_calendar_month_24" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gi"
                android:textSize="22sp" />

            <NumberPicker
                android:id="@+id/numberpick_minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ph_t"
                android:textSize="22sp" />

            <NumberPicker
                android:id="@+id/numberpick_seconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerText" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chotLich"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/background_button_corner"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/ch_t_l_ch"
        android:paddingTop="3dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>