<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    android:weightSum="10">
    <!--logo-->
    <LinearLayout
        android:id="@+id/layout_logoWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/logo2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!--form dang nhap-->
    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="10">

            <EditText
                android:id="@+id/ed_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/app_name"
                android:textColor="@color/black" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/ed_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_outline_24px"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="********"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

                <ImageView
                    android:id="@+id/img_hidePassword"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignEnd="@+id/ed_Password"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/ic_baseline_visibility_off_24" />
            </RelativeLayout>
            <!--    Button login tai khoan va quen mat khau-->
            <TextView
                android:id="@+id/tv_FogotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center|end"
                android:text="@string/fogotPassword"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:background="@drawable/background_button_corner"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="5dp"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:orientation="vertical">
        <!--chua co tai khoan, dang ky-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Chưa có tài khoản? " />

            <TextView
                android:id="@+id/tv_GoToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="Đăng ký"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>