<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageView
        android:id="@+id/btn_BackToRegister"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_weight="0.8"
        android:src="@drawable/ic_baseline_keyboard_backspace_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.2"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:paddingStart="20dp"
                android:text="@string/Verify_phone_number"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="20dp"
                android:text="@string/Verify_phone_number_notify"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="8">

            <EditText
                android:id="@+id/edCode1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_input_otp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="48dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edCode2"
                android:layout_width="wrap_content"

                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_input_otp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="48dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edCode3"
                android:layout_width="wrap_content"

                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_input_otp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="48dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edCode4"
                android:layout_width="wrap_content"

                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_input_otp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="48dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edCode5"
                android:layout_width="wrap_content"

                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_input_otp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="48dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edCode6"
                android:layout_width="wrap_content"

                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_input_otp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="48dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Không nhận được mã xác minh? "
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_SendVerifyAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Gửi lại"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CheckOTP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_button_corner"
            android:fontFamily="@font/poppins_medium"
            android:paddingTop="3dp"
            android:text="@string/Verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp" />
        <View
            android:layout_weight="2.6"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>

</LinearLayout>